namespace BrainDump.Application.DTOs;

public record FactDto(int Id, int SectionId, string Text, int Position);
